[package]
name = "ash_bootstrap"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
raw-window-handle = "0.6"
winit = { version = "0.29", default-features = false, features = ["rwh_06"] }
ash = { version = "0.38", features = ["loaded"] }
ash-window = "0.13"