[package]
name = "ash_bootstrap"
version = "0.1.1"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
raw-window-handle = "0.6"
ash = { version = "^0.38", features = ["loaded"] }
ash-window = "^0.13"
vulkan_has_required_features = { path = "vulkan_has_required_features" }
